--- a/admin/config.yml
+++ b/admin/config.yml
@@ -3,8 +3,8 @@ backend:
   branch: main # Branch to update (optional; defaults to master)
 
 publish_mode: editorial_workflow
-media_folder: "/img" # Media files will be stored in the repo under images/uploads
-public_folder: "/img" # The src attribute for uploaded media will begin with /images/uploads
+media_folder: "/image" # Media files will be stored in the repo under images/uploads
+public_folder: "/image" # The src attribute for uploaded media will begin with /images/uploads
 collections:
   - name: "post" # Used in routes, e.g., /admin/collections/post
     label: "Post" # Used in the UI
