--- a/admin/config.yml
+++ b/admin/config.yml
@@ -23,7 +23,7 @@ collections:
     files:
       - label: "About Page"
         name: "about"
-        folder: "/about"
+        file: "/about"
         create: true
         fields:
           - {label: "Layout", name: "layout", widget: "hidden", default: "post"}
@@ -31,7 +31,7 @@ collections:
           - {label: "Body", name: "body", widget: "markdown"}
       - label: "Contact Page"
         name: "contact"
-        folder: "/contact"
+        file: "/contact"
         create: true
         fields:
           - {label: "Layout", name: "layout", widget: "hidden", default: "post"}
